@@ -23,8 +23,7 @@ import java.io.IOException;
 import java.util.Iterator;
 
 import org.apache.hadoop.hbase.io.BatchUpdate;
-import org.apache.hadoop.hbase.io.ImmutableBytesWritable;
-import org.apache.hadoop.hbase.mapred.TableOutputFormat;
+import org.apache.hadoop.io.IntWritable;
 import org.apache.hadoop.io.Writable;
 import org.apache.hadoop.io.WritableComparable;
 import org.apache.hadoop.mapred.JobConf;
@@ -35,7 +34,7 @@ import org.apache.hadoop.mapred.Reporter;
 
 @SuppressWarnings("unchecked")
 public abstract class MatrixReduce<K extends WritableComparable, V extends Writable>
-    extends MapReduceBase implements Reducer<K, V, ImmutableBytesWritable, BatchUpdate> {
+    extends MapReduceBase implements Reducer<K, V, IntWritable, BatchUpdate> {
   /**
    * Use this before submitting a TableReduce job. It will
    * appropriately set up the JobConf.
@@ -46,10 +45,10 @@ public abstract class MatrixReduce<K extends WritableComparable, V extends Writa
    */
   public static void initJob(String table,
       Class<? extends MatrixReduce> reducer, JobConf job) {
-    job.setOutputFormat(TableOutputFormat.class);
+    job.setOutputFormat(MatrixOutputFormat.class);
     job.setReducerClass(reducer);
-    job.set(TableOutputFormat.OUTPUT_TABLE, table);
-    job.setOutputKeyClass(ImmutableBytesWritable.class);
+    job.set(MatrixOutputFormat.OUTPUT_TABLE, table);
+    job.setOutputKeyClass(IntWritable.class);
     job.setOutputValueClass(BatchUpdate.class);
   }
 
@@ -62,6 +61,6 @@ public abstract class MatrixReduce<K extends WritableComparable, V extends Writa
    * @throws IOException
    */
   public abstract void reduce(K key, Iterator<V> values,
-    OutputCollector<ImmutableBytesWritable, BatchUpdate> output, Reporter reporter)
+    OutputCollector<IntWritable, BatchUpdate> output, Reporter reporter)
   throws IOException;
 }
